# so2_progetto

./: CMakeLists.txt  main.c
include/: LinkedList.h  errors.h  hashtable.h  parser2.h  parsers.h  stats.h  utility.h  variable_recognizer.h
src/: LinkedList.c  hashtable.c  utility.c
src/processing/: hashtable.c  stats.c
src/text_manipulation/: parsers.c  parsers2.c  variable_recognizer.c
